--- a/pages/index.css
+++ b/pages/index.css
@@ -25,5 +25,7 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/__role/popup__role.css);
-@import url(../blocks/popup/__save/popup__save.css);
-@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/form/__save/form__save.css);
+@import url(../blocks/form/__info/);
