--- a/pages/index.css
+++ b/pages/index.css
@@ -28,4 +28,4 @@
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__save/form__save.css);
-@import url(../blocks/form/__info/);
+@import url(../blocks/form/__info/form__info.css);
