--- a/blocks/profile/__role/profile__role.css
+++ b/blocks/profile/__role/profile__role.css
@@ -5,8 +5,11 @@
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
-    margin-top: 16px;
+    margin-top: 9px;
     margin-bottom: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
