--- a/blocks/form/__save/form__save.css
+++ b/blocks/form/__save/form__save.css
@@ -4,7 +4,7 @@
     left: 36px;
     width: 358px;
     height: 50px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
