--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,7 @@
     background-image: url(../../../images/add-button.svg);
     background-position: center;
     background-repeat: no-repeat;
+    margin-left: auto;
 }
 
 .profile__add-button:hover {
@@ -18,6 +19,5 @@
 @media screen and (max-width: 767px) {
     .profile__add-button {
         width: 282px;
-        height: 50px;
     }
 }
