--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,17 @@
 .footer {
-    margin-left: 200px;
+    max-width: 880px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 69px;
     margin-bottom: 60px;
 }
 
 @media screen and (max-width: 767px) {
     .footer {
+        max-width: 282px;
         margin-top: 48px;
-        margin-left: 19px;
         margin-bottom: 36px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
