--- a/blocks/form/__save/form__save.css
+++ b/blocks/form/__save/form__save.css
@@ -1,7 +1,6 @@
 .form__save {
-    position: absolute;
-    top: 243px;
-    left: 36px;
+    margin-top: 50px;
+    margin-left: 36px;
     width: 358px;
     height: 50px;
     font-family: 'Inter', Arial, sans-serif;
@@ -29,5 +28,7 @@
         left: 22px;
         font-size: 14px;
         line-height: 17px;
+        margin-top: 45px;
+        margin-left: 22px;
     }
 }
