--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -5,17 +5,15 @@
     font-size: 24px;
     line-height: 29px;
     color: #000000;
-    position: absolute;
-    left: 36px;
-    top: 34px;
-    margin: 0;
+    margin-left: 36px;
+    margin-top: 34px;
 }
 
 @media screen and (max-width: 767px) {
-    .popup__title {
+    .form__title {
         font-size: 18px;
         line-height: 22px;
-        left: 22px;
-        top: 25px;
+        margin-left: 22px;
+        margin-top: 27px;
     }
 }
