--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,20 @@
 .popup {
-    position: absolute;
+    position: fixed;
     width: 100%;
     left: 0;
     top: 0;
     justify-content: center;
     display: none;
+}
+
+.popup::before {
+    content: '';
+    background: #000;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    z-index: 9999;
 }
