--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,4 @@
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__save/form__save.css);
 @import url(../blocks/form/__info/form__info.css);
+@import url(../blocks/form/__input/form__input.css);
