--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,13 +1,9 @@
 .popup__container {
     width: 430px;
-    position: absolute;
-    /* position: absolute; */
-    /* left: 425px; */
-    /* top: 195px; */
-    /* position: fixed; */
-    margin-top: 25vh;
-    margin-left: auto;
-    margin-right: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
